--- a/3_task/index.html
+++ b/3_task/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>3_task</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Speech: "To be, or not to be, that is the question"</h1>
+    <h1>Speech: To be, or not to be--that is the question</h1>
+
+
 </body>
+
 </html>
