--- a/3_task/index.html
+++ b/3_task/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Speech: To be, or not to be--that is the question</h1>
+    <p>BY <a href="https://en.wikipedia.org/wiki/William_Shakespeare"></a></p>
     <p>To be, or not to be, that is the question:<br>'tis nobler in the mind to suffer<br>
         The slings and arrows of outrageous fortune,<br>
         Or to take Arms against a Sea of troubles,<br>
