--- a/3_task/index.html
+++ b/3_task/index.html
@@ -1,44 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3_task</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Roboto&display=swap" rel="stylesheet">
-</head>
-
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <h1>Speech: To be, or not to be--that is the question</h1>
-    <p>BY <a href="https://en.wikipedia.org/wiki/William_Shakespeare"></a></p>
-    <p>To be, or not to be, that is the question:<br>'tis nobler in the mind to suffer<br>
-        The slings and arrows of outrageous fortune,<br>
-        Or to take Arms against a Sea of troubles,<br>
-        And by opposing end them: to die, to sleep;<br>
-        No more; and by a sleep, to say we end<br>
-        The heart-ache, and the thousand natural shocks<br>
-        That Flesh is heir to? ' Tis a consummation<br> Devoutly to be wished. To die,<br> to sleep, To sleep, perchance
-        to
-        Dream; aye, there's the rub,<br> For in that sleep of death, what dreams may come,<br> When we have shuffled off
-        this mortal coil,<br> Must give us pause. There's the respect That makes Calamity of so long life:<br> For who
-        would
-        bear the Whips and Scorns of time,<br> The Oppressor's wrong, the proud man's Contumely,<br> The pangs of
-        dispised
-        Love, the Law’s delay,<br> The insolence of Office, and the spurns That patient merit of the unworthy takes,<br>
-        When he himself might his Quietus make With a bare Bodkin?<br> Who would Fardels bear, [F: these Fardels] To
-        grunt and sweat under a weary life,<br> But that the dread of something after death,<br> The undiscovered
-        country,
-        from whose bourn No traveller returns,<br> puzzles the will, And makes us rather bear those ills we have,<br>
-        Than
-        fly to others that we know not of.<br> Thus conscience does make cowards of us all, And thus the native hue
-        of<br>
-        Resolution Is sicklied o'er, with the pale cast of Thought,<br> And enterprises of great pitch and moment,<br>
-        [F:
-        pith] With this regard their Currents turn awry, [F: away]<br> And lose the name of Action. Soft you now, The
-        fair Ophelia?<br> Nymph, in thy Orisons Be all my sins rememberd. </p>
-
-
-</body>
-
+    <p>
+      BY
+      <a href="https://en.wikipedia.org/wiki/William_Shakespeare"
+        >William Shakespeare</a
+      >
+    </p>
+    <p>(<em>from</em> Hamlet, <em>spoken by Hamlet</em>)</p>
+    <p>
+      To be, or not to be, that is the question:<br />'tis nobler in the mind to
+      suffer<br />
+      The slings and arrows of outrageous fortune,<br />
+      Or to take Arms against a Sea of troubles,<br />
+      And by opposing end them: to die, to sleep;<br />
+      No more; and by a sleep, to say we end<br />
+      The heart-ache, and the thousand natural shocks<br />
+      That Flesh is heir to? ' Tis a consummation<br />
+      Devoutly to be wished. To die,<br />
+      to sleep, To sleep, perchance to Dream; aye, there's the rub,<br />
+      For in that sleep of death, what dreams may come,<br />
+      When we have shuffled off this mortal coil,<br />
+      Must give us pause. There's the respect That makes Calamity of so long
+      life:<br />
+      For who would bear the Whips and Scorns of time,<br />
+      The Oppressor's wrong, the proud man's Contumely,<br />
+      The pangs of dispised Love, the Law’s delay,<br />
+      The insolence of Office, and the spurns That patient merit of the unworthy
+      takes,<br />
+      When he himself might his Quietus make With a bare Bodkin?<br />
+      Who would Fardels bear, [F: these Fardels] To grunt and sweat under a
+      weary life,<br />
+      But that the dread of something after death,<br />
+      The undiscovered country, from whose bourn No traveller returns,<br />
+      puzzles the will, And makes us rather bear those ills we have,<br />
+      Than fly to others that we know not of.<br />
+      Thus conscience does make cowards of us all, And thus the native hue of<br />
+      Resolution Is sicklied o'er, with the pale cast of Thought,<br />
+      And enterprises of great pitch and moment,<br />
+      [F: pith] With this regard their Currents turn awry, [F: away]<br />
+      And lose the name of Action. Soft you now, The fair Ophelia?<br />
+      Nymph, in thy Orisons Be all my sins rememberd.
+    </p>
+  </body>
 </html>
