--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-    <h1>This is my main heading</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet sapiente quibusdam. Similique maiores
-        sed saepe quo perferendis itaque vitae velit nulla illo dolorem accusantium culpa, tempore veritatis blanditiis?
-        Ipsum atque pariatur nobis provident commodi tenetur obcaecati nisi. Pariatur, eos tenetur nobis adipisci
-        praesentium reiciendis animi vero a necessitatibus alias sint impedit ex quidem nemo quo labore beatae. Sapiente
-        vitae molestiae blanditiis aperiam accusantium consequuntur reiciendis cum iure, ipsum, ducimus sit inventore
-        voluptatem voluptatibus expedita quod, modi cumque repudiandae. Itaque vel dolorum voluptatum modi, architecto
-        unde distinctio voluptates ab illo in ducimus amet. Quaerat exercitationem voluptatum maiores officia magni
-        omnis!</p>
-
-</body>
-
+  <body>
+    <h1>Hello World!</h1>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet
+      sapiente quibusdam. Similique maiores sed saepe quo perferendis itaque
+      vitae velit nulla illo dolorem accusantium culpa, tempore veritatis
+      blanditiis? Ipsum atque pariatur nobis provident commodi tenetur obcaecati
+      nisi. Pariatur, eos tenetur nobis adipisci praesentium reiciendis animi
+      vero a necessitatibus alias sint impedit ex quidem nemo quo labore beatae.
+      Sapiente vitae molestiae blanditiis aperiam accusantium consequuntur
+      reiciendis cum iure, ipsum, ducimus sit inventore voluptatem voluptatibus
+      expedita quod, modi cumque repudiandae. Itaque vel dolorum voluptatum
+      modi, architecto unde distinctio voluptates ab illo in ducimus amet.
+      Quaerat exercitationem voluptatum maiores officia magni omnis!
+    </p>
+  </body>
 </html>
