--- a/2_task/index.html
+++ b/2_task/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <p>This is a paragraph. 
-        <strong>Imporant text</strong>
-        <em>Emphasized text</em>
-         <mark>Marked text</mark> <small>Small text</small> <del>Deleted text</del> <ins>Inserted text</ins></p>
-        <p><abbr title="">Defines an abbreviation or acronym</abbr></p>
-        <p><address>Defines contact information for the author/owner of a Document</address></p>
-        <p><bdo dir="rtl">Defines the text direction</bdo></p>
-        <p><blockquote>Defines a section</blockquote></p>
-        <p>Lorem ipsum dolor sit, <br> consectetur adipisicing elit. Iusto, possimus corrupti culpa inventore totam dicta sapiente neque voluptas itaque dolorem animi. Temporibus ratione suscipit eum. Voluptatem, nisi ex ipsa, eius ullam at delectus, repellat accusantium vitae maxime quasi unde magnam laborum dignissimos neque. Quos officiis suscipit a id placeat alias. Vero tempore sit asperiores odio maxime<hr> sed. Voluptate rerum repellat fugiat necessitatibus. Fuga suscipit pariatur aliquam dolorum praesentium cupiditate earum quas fugiat. Odit aspernatur aliquid, numquam, corrupti cumque quod fuga, doloribus quo officiis quis in saepe illum exercitationem qui magnam. Iure minus, voluptatibus corporis laboriosam neque impedit? Quis, illo delectus?</p>
-</body>
+  </head>
+  <body>
+    <h1>This is heading one</h1>
+    <h2>This is heading two</h2>
+    <h3>This is heading three</h3>
+    <h4>This is heading four</h4>
+    <h5>This is heading five</h5>
+    <h6>This is heading six</h6>
+
+    <strong>Imporant text</strong><br />
+    <em>Emphasized text</em><br />
+    <mark>Marked text</mark><br />
+    <small>Small text</small><br />
+    <del>Deleted text</del><br />
+    <ins>Inserted text</ins><br />
+    <sub>Subscript text</sub><br />
+    <sup>Superscript text</sup>
+    <pre>pre-formatted text</pre>
+    <b>Bold text dont use!!!</b><br />
+    <i>Italic text dont use!!!</i><br />
+
+    <abbr title="">Defines an abbreviation or acronym</abbr>
+    <address>
+      Defines contact information for the author/owner of a Document
+    </address>
+    <bdo dir="rtl">Defines the text direction</bdo>
+    <blockquote>Defines a section</blockquote>
+    <cite>Defines the title of a work</cite><br />
+    <q>Defines a short inline question</q>
+  </body>
 </html>
