--- a/4_task/contact.html
+++ b/4_task/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>4_task</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap"
@@ -10,7 +10,6 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header>
       <ul>
@@ -19,15 +18,6 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
-    <main>
-      <h1>This is the main heading</h1>
-      <img src="https://source.unsplash.com/500x500/?dog,golden" alt="doggy" />
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolor
-        non dolores architecto asperiores voluptate fugiat velit at veniam quo
-        similique nihil alias consectetur repudiandae qui, commodi quod.
-        Incidunt, ratione.
-      </p>
-    </main>
+    <h1>This is a contact page</h1>
   </body>
 </html>
