--- a/4_task/contact.html
+++ b/4_task/contact.html
@@ -18,6 +18,32 @@
     </ul>
   </header>
   <h1>This is a contact page</h1>
+  <table>
+    <tr>
+      <td>Name</td>
+      <td>Title</td>
+      <td>Phone</td>
+      <td>Email</td>
+    </tr>
+    <tr>
+      <td>Aaron Ojala</td>
+      <td>CEO</td>
+      <td>12345677</td>
+      <td>aaron.ojala@google.com</td>
+    </tr>
+    <tr>
+      <td>Suvi Ryytty</td>
+      <td>Manager</td>
+      <td>3456788</td>
+      <td>suvi.ryytty@google.com</td>
+    </tr>
+    <tr>
+      <td>Joe Doe</td>
+      <td>Employee</td>
+      <td>4567899</td>
+      <td>joe.doe@yahoo.com</td>
+    </tr>
+  </table>
 </body>
 
 </html>
