--- a/4_task/contact.html
+++ b/4_task/contact.html
@@ -19,29 +19,31 @@
   </header>
   <h1>This is a contact page</h1>
   <table>
-    <tr>
-      <td>Name</td>
-      <td>Title</td>
-      <td>Phone</td>
-      <td>Email</td>
-    </tr>
+    <thead>
+      <tr>
+        <td>Name</td>
+        <td>Title</td>
+        <td>Phone</td>
+        <td>Email</td>
+      </tr>
+    </thead>
     <tr>
       <td>Aaron Ojala</td>
       <td>CEO</td>
       <td>12345677</td>
-      <td>aaron.ojala@google.com</td>
+      <td><a href="mailto:aaron.ojala@google.com">aaron.ojala@google.com </a></td>
     </tr>
     <tr>
       <td>Suvi Ryytty</td>
       <td>Manager</td>
       <td>3456788</td>
-      <td>suvi.ryytty@google.com</td>
+      <td><a href="mailto:suvi.ryytty@google.com">suvi.ryytty@google.com</a></td>
     </tr>
     <tr>
       <td>Joe Doe</td>
       <td>Employee</td>
       <td>4567899</td>
-      <td>joe.doe@yahoo.com</td>
+      <td><a href="mailto:green.dragon@google.com">green.dragon@google.com</a></td>
     </tr>
   </table>
 </body>
