--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,107 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
-</head>
-
-<body>
-  <header>
-    <div id="logo">
-      <a href="#">MyWeb</a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#">Past</a></li>
-        <li><a href="#">Present</a></li>
-        <li><a href="#">Future</a></li>
-        <li><a href="#">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div id="hero-banner">
-      <h1>Hi my name is <span>Aaron Ojala</span> welcome to my page
-      </h1>
-    </div>
-    <div id="past">
-      <h2>Past</h2>
-      <img src="https://source.unsplash.com//m_HRfLhgABo/700x400" alt="code" />
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum quisquam voluptatum eveniet fugiat laudantium vel
-        ullam eius, consequuntur, nihil, quo at esse? Reprehenderit, eveniet. Porro reprehenderit modi labore animi
-        delectus illo temporibus rem assumenda! Quisquam aliquam tenetur magnam minus debitis, deleniti earum
-        consequuntur
-        eum nisi illo quae, facere iste veniam quia autem qui fugiat saepe sed reprehenderit a maxime. Doloremque
-        consectetur sunt porro a autem quia saepe architecto quibusdam ratione delectus accusantium, assumenda atque?
-        Mollitia, quibusdam dignissimos! Enim dignissimos aliquam accusamus voluptas, cupiditate perspiciatis optio non.
-        Impedit aut quasi dolor magnam adipisci maiores, quibusdam rem accusantium? Repudiandae excepturi soluta unde
-        reprehenderit asperiores necessitatibus deserunt nesciunt voluptatem, libero, laborum, quam natus aspernatur
-        quia.
-        Officia, facere. Incidunt, eos, facilis quia quisquam dolores natus nulla fugiat suscipit numquam quos, alias
-        aut
-        consectetur sed eius quibusdam cum adipisci deleniti perspiciatis sequi excepturi maxime iusto harum hic quidem?
-        Non, ullam. Expedita, incidunt. Porro impedit, totam adipisci quis quidem culpa ipsa necessitatibus doloremque
-        consequuntur ab, repudiandae facere, aut aspernatur placeat maiores exercitationem ea? Tempora mollitia iure ad
-        sapiente dolores? Alias a est doloremque. Facere maiores, enim quam consequatur deserunt unde voluptatem dolorum
-        magni, molestiae ullam fugiat numquam dignissimos, reprehenderit nihil. Quasi esse reiciendis nam harum
-        consectetur.
-      </p>
-    </div>
-    <div id="present">
-      <h2>Present</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, minus animi? Neque quasi cupiditate
-        magnam
-        dolorum quae eum harum totam, delectus explicabo laudantium aspernatur exercitationem impedit ea optio
-        beatae
-        dolor sed maiores, odit dignissimos soluta iusto sequi aliquam? Quas voluptatem architecto praesentium
-        nostrum
-        nihil quis corporis optio quia. Ratione suscipit ipsa, eaque tempora quas labore unde quo facere
-        exercitationem
-        nihil debitis aliquid doloremque possimus itaque maxime cumque illum magni iure maiores esse. Sed sunt
-        voluptates quisquam laudantium vitae cum labore molestiae, in minus, voluptatem sapiente odit quod, illum
-        velit
-        molestias expedita similique? Maxime sapiente suscipit provident nulla obcaecati officiis asperiores alias
-        incidunt nisi facilis culpa omnis sequi blanditiis quibusdam, distinctio assumenda, amet at dolorum non
-        magni.
-        Aspernatur nihil quae eius perferendis cum? Ipsum assumenda asperiores iusto eius obcaecati delectus, magni
-        iure
-        temporibus ipsam? Voluptas, eum deserunt quas magni dolor, corporis quasi quibusdam officia nobis laudantium
-        animi autem? A, mollitia, recusandae voluptates dolore itaque tempore inventore odio cupiditate dignissimos
-        cum
-        dolorum reprehenderit consequuntur doloremque, atque aperiam autem dolores praesentium at ea aspernatur
-        iusto
-        dolorem facere! Autem dolorum nam mollitia voluptates, maiores, rerum aperiam velit reprehenderit in
-        deleniti
-        perferendis? Illum culpa labore cumque. Eum voluptatem est asperiores facilis minus, laboriosam ipsam
-        placeat!
-      </p>
-    </div>
-    <div class="Future">
-      <h2>Future</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt porro incidunt, veritatis accusamus
-        eius
-        provident placeat at alias laborum ut repellat quisquam deleniti hic fuga corporis ipsam adipisci maiores
-        amet
-        molestiae id dolore minima est nobis voluptas? Voluptatum possimus dignissimos deleniti facere dicta sed
-        ipsa
-        consequuntur aut debitis, corrupti, quam obcaecati praesentium assumenda neque tempore incidunt
-        reprehenderit
-        eveniet dolorem quia? Placeat minus vel tenetur repudiandae voluptas veritatis ipsum perferendis nihil
-        obcaecati
-        distinctio blanditiis, rem, laboriosam nemo praesentium sed, eligendi vitae incidunt illum ab atque?
-        Corrupti,
-        reprehenderit consequatur at ea magni quae, fugiat saepe voluptatibus mollitia, consequuntur maxime
-        assumenda!
-        Facere, eaque!</p>
-    </div>
-  </main>
-  <footer>
-    <p>Copyright &copy; My Website 2020</p>
-  </footer>
-</body>
-
+  <body>
+    <header>
+      <div id="logo">
+        <a href="#">MyWeb</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#past">Past</a></li>
+          <li><a href="#present">Present</a></li>
+          <li><a href="#future">Future</a></li>
+          <li><a href="#footer">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div id="hero-banner">
+        <h1>Hi my name is <span>Aaron Ojala</span> welcome to my portfolio</h1>
+      </div>
+      <div id="past">
+        <div class="container">
+          <h2>Past</h2>
+          <img
+            src="https://source.unsplash.com//m_HRfLhgABo/700x400"
+            alt="code"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            pariatur tenetur ullam aliquam illum nobis eum dolorum, sequi
+            corrupti fuga nam nisi soluta cumque tempore facere beatae
+            reprehenderit animi. Assumenda quaerat doloremque necessitatibus ex
+            et animi praesentium, sint ea aliquid dicta cum beatae iste
+            quibusdam. Porro laborum cum inventore quis! Reiciendis repellat
+            dolore sint architecto repudiandae maxime fugiat aut quis et magnam
+            doloribus, inventore nostrum accusamus, quo ab dolorum enim
+            expedita! Quam sapiente laborum repudiandae velit saepe, repellendus
+            beatae porro illo nam dicta veritatis delectus sunt adipisci quas
+            deleniti. Deserunt quae veniam ullam ut animi quas harum recusandae
+            delectus unde?
+          </p>
+        </div>
+      </div>
+      <div id="present">
+        <img
+          src="https://source.unsplash.com//o4UhdLv5jbQ"
+          alt="picturepresent"
+        />
+        <div class="content">
+          <h2>Present</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
+            laborum at placeat laudantium reiciendis natus! Saepe ex nihil,
+            debitis ratione quam reiciendis optio expedita facilis, aspernatur
+            recusandae voluptas, repellendus consequatur. Quos, nostrum. Minima
+            animi magnam fugit aut hic neque, maiores suscipit voluptatibus?
+            Quaerat aperiam vero temporibus. Praesentium quas nemo laborum minus
+            voluptatem quo aliquam eveniet in sapiente! Eaque fugit recusandae
+            dolor soluta quisquam temporibus impedit sunt quos alias ea dicta
+            voluptatum, porro delectus blanditiis doloremque at dolores
+            reiciendis quam sint magni aliquam laborum facilis! Inventore ipsam,
+            ullam eveniet repellat nobis aut quisquam, expedita velit
+            consequatur doloribus architecto illum incidunt? Provident.
+          </p>
+        </div>
+      </div>
+      <div id="future">
+        <div class="container">
+          <h2>Future</h2>
+          <img
+            src="https://source.unsplash.com//9LMGWHqUwnc/"
+            alt="futurepic"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+            porro incidunt, veritatis accusamus eius provident placeat at alias
+            laborum ut repellat quisquam deleniti hic fuga corporis ipsam
+            adipisci maiores amet molestiae id dolore minima est nobis voluptas?
+            Voluptatum possimus dignissimos deleniti facere dicta sed ipsa
+            consequuntur aut debitis, corrupti, quam obcaecati praesentium
+            assumenda neque tempore incidunt reprehenderit eveniet dolorem quia?
+            Placeat minus vel tenetur repudiandae voluptas veritatis ipsum
+            perferendis nihil obcaecati distinctio blanditiis, rem, laboriosam
+            nemo praesentium sed, eligendi vitae incidunt illum ab atque?
+            Corrupti, reprehenderit consequatur at ea magni quae, fugiat saepe
+            voluptatibus mollitia, consequuntur maxime assumenda! Facere, eaque!
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer id="footer">
+      <p>Copyright &copy; My Website 2020</p>
+    </footer>
+  </body>
 </html>
