--- a/6_task/index.html
+++ b/6_task/index.html
@@ -5,29 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
+      <div class="h1"><h1>Sign Up</h1></div>
+      <div class="h3"><h3>It's free and only takes a minute</h3></div>
       <div class="form">
         <form>
-          <h1>Sign Up</h1>
-          <p>It's free and only takes a minute</p>
-          <p>First name</p>
+          <div class="first">
+            <label>First name</label> <input type="text" />
+          </div>
+          <label>Last name</label>
           <input type="text" />
-          <p>Last name</p>
-          <input type="text" />
-          <p>Email</p>
+          <label>Email</label>
           <input type="email" />
-          <p>Password</p>
+          <label>Password</label>
           <input type="password" />
-          <p>Confirm password</p>
+          <label>Confirm password</label>
           <input type="password" /><br />
           <button type="submit">SIGN UP</button>
-          <p>
-            By clicking the Sign up button you agree to our
-            <a href="#">Terms & Conditions</a>and <a href="#">Privacy Policy</a>
-          </p>
+          <p></p>
         </form>
+      </div>
+      <div class="sign">
+        <p>
+          By clicking the Sign up button you agree to our
+          <a href="#">Terms & Conditions</a> and <a href="#">Privacy Policy</a>
+        </p>
       </div>
     </div>
     <footer>Already have an account? <a href="#">Login Here</a></footer>
