--- a/7_task3rdweekrecap/index.html
+++ b/7_task3rdweekrecap/index.html
@@ -13,12 +13,12 @@
 
   <body>
     <header>
-      <div id="logo"><img src="img/logo.jpg" alt="globaltrade" /></div>
+      <div id="logo"><img src="img/logo.png" alt="globaltrade" /></div>
       <nav>
         <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT US</a></li>
-          <li><a href="#">CONTACT US</a></li>
+          <li><a href="#logo">Home</a></li>
+          <li><a href="#about">About us</a></li>
+          <li><a href="#contact">Contact us</a></li>
         </ul>
       </nav>
     </header>
@@ -32,7 +32,7 @@
               esse quo assumenda, recusandae ipsam fugiat fuga asperiores
               deleniti ratione. Velit.
             </p>
-            <a href="#">READ MORE</a>
+            <a href="#">Read More</a>
           </div>
         </div>
       </div>
@@ -56,34 +56,57 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="content">
-        <h2>Lorem ipsum dolor sit</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
-          minus quisquam nihil sit omnis nam accusantium quas maxime quod, iure
-          neque adipisci non, sunt voluptate sed dicta, eius assumenda eum?
-        </p>
-      </div>
-      <h2>Contact Us</h2>
-      <form>
-        <div class="names">
-          <label>First name</label> <input type="text" /> <br />
-          <label>Last Name</label> <input type="text" /> <br />
-          <label>Email</label>
-          <input type="email" />
+    <div id="contact">
+      <footer>
+        <div class="content2">
+          <h2>Lorem ipsum dolor sit</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+            minus quisquam nihil sit omnis nam accusantium quas maxime quod,
+            iure neque adipisci non, sunt voluptate sed dicta, eius assumenda
+            eum?
+          </p>
         </div>
-        <h3>Do you want to join with our newsletter?</h3>
-        <input type="radio" /> Yes <br />
-        <input type="radio" /> No
-        <h3>How did you find us?</h3>
-        <input type="checkbox" /> Friend told me <br />
-        <input type="checkbox" /> Found in the internet <br />
-        <input type="checkbox" /> Saw in Social Media <br />
-        <input type="checkbox" /> Other <br />
-        <textarea></textarea> <br />
-        <button>Send</button>
-      </form>
-    </footer>
+        <form>
+          <h2>Contact Us</h2>
+          <div class="form-group">
+            <label for="firstname">First name</label>
+            <input type="text" name="firstname" id="firstname" />
+          </div>
+          <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input type="text" name="lastname" id="lastname" />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" />
+          </div>
+          <div class="newsletter">
+            <h3>Do you want to join with our newsletter?</h3>
+            <div class="radio1"><input type="radio" /><label>Yes</label></div>
+            <div class="radio2"><input type="radio" /><label>No</label></div>
+          </div>
+          <div class="how">
+            <h3>How did you find us?</h3>
+            <div class="form-group2">
+              <input type="checkbox" /><label>Friend told me</label>
+            </div>
+            <div class="form-group2">
+              <input type="checkbox" /><label>Found in the internet</label>
+            </div>
+            <div class="form-group2">
+              <input type="checkbox" /><label>Saw in Social Media</label>
+            </div>
+            <div class="form-group2">
+              <input type="checkbox" /><label>Other</label>
+            </div>
+            <div class="form-group2">
+              <textarea placeholder="How?"></textarea>
+            </div>
+            <button>Send</button>
+          </div>
+        </form>
+      </footer>
+    </div>
   </body>
 </html>
