--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,96 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aaron Ojala Portfolio" />
+    <meta name="author" content="Aaron Ojala" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, Portfolio" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet" />
-</head>
-
-<body>
-  <header>
-    <div id="logo">
-      <a href="#">MyWeb</a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="#past">Past</a></li>
-        <li><a href="#present">Present</a></li>
-        <li><a href="#future">Future</a></li>
-        <li><a href="#footer">Contact Me</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div id="hero-banner">
-      <h1>Hi my name is <span>Aaron Ojala</span> welcome to my portfolio</h1>
-    </div>
-    <div id="past">
-      <div class="container">
-        <h2>Past</h2>
-        <img src="https://source.unsplash.com//m_HRfLhgABo/700x400" alt="code" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-          pariatur tenetur ullam aliquam illum nobis eum dolorum, sequi
-          corrupti fuga nam nisi soluta cumque tempore facere beatae
-          reprehenderit animi. Assumenda quaerat doloremque necessitatibus ex
-          et animi praesentium, sint ea aliquid dicta cum beatae iste
-          quibusdam. Porro laborum cum inventore quis! Reiciendis repellat
-          dolore sint architecto repudiandae maxime fugiat aut quis et magnam
-          doloribus, inventore nostrum accusamus, quo ab dolorum enim
-          expedita! Quam sapiente laborum repudiandae velit saepe, repellendus
-          beatae porro illo nam dicta veritatis delectus sunt adipisci quas
-          deleniti. Deserunt quae veniam ullam ut animi quas harum recusandae
-          delectus unde?TESTEST
-        </p>
+  <body>
+    <header>
+      <div id="logo">
+        <a href="#">MyWeb</a>
       </div>
-    </div>
-    <div id="present">
-      <img src="https://source.unsplash.com//o4UhdLv5jbQ" alt="picturepresent" />
-      <div class="content">
-        <h2>Present</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-          laborum at placeat laudantium reiciendis natus! Saepe ex nihil,
-          debitis ratione quam reiciendis optio expedita facilis, aspernatur
-          recusandae voluptas, repellendus consequatur. Quos, nostrum. Minima
-          animi magnam fugit aut hic neque, maiores suscipit voluptatibus?
-          Quaerat aperiam vero temporibus. Praesentium quas nemo laborum minus
-          voluptatem quo aliquam eveniet in sapiente! Eaque fugit recusandae
-          dolor soluta quisquam temporibus impedit sunt quos alias ea dicta
-          voluptatum, porro delectus blanditiis doloremque at dolores
-          reiciendis quam sint magni aliquam laborum facilis! Inventore ipsam,
-          ullam eveniet repellat nobis aut quisquam, expedita velit
-          consequatur doloribus architecto illum incidunt? Provident.
-        </p>
+      <nav>
+        <ul>
+          <li><a href="#past">Past</a></li>
+          <li><a href="#present">Present</a></li>
+          <li><a href="#future">Future</a></li>
+          <li><a href="#footer">Contact Me</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div id="hero-banner">
+        <h1>Hi my name is <span>Aaron Ojala</span> welcome to my portfolio</h1>
       </div>
-    </div>
-    <div id="future">
-      <div class="container">
-        <h2>Future</h2>
-        <img src="https://source.unsplash.com//9LMGWHqUwnc/" alt="futurepic" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
-          porro incidunt, veritatis accusamus eius provident placeat at alias
-          laborum ut repellat quisquam deleniti hic fuga corporis ipsam
-          adipisci maiores amet molestiae id dolore minima est nobis voluptas?
-          Voluptatum possimus dignissimos deleniti facere dicta sed ipsa
-          consequuntur aut debitis, corrupti, quam obcaecati praesentium
-          assumenda neque tempore incidunt reprehenderit eveniet dolorem quia?
-          Placeat minus vel tenetur repudiandae voluptas veritatis ipsum
-          perferendis nihil obcaecati distinctio blanditiis, rem, laboriosam
-          nemo praesentium sed, eligendi vitae incidunt illum ab atque?
-          Corrupti, reprehenderit consequatur at ea magni quae, fugiat saepe
-          voluptatibus mollitia, consequuntur maxime assumenda! Facere, eaque!
-        </p>
+      <div id="past">
+        <div class="container">
+          <h2>Past</h2>
+          <img
+            src="https://source.unsplash.com//m_HRfLhgABo/700x400"
+            alt="code"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
+            pariatur tenetur ullam aliquam illum nobis eum dolorum, sequi
+            corrupti fuga nam nisi soluta cumque tempore facere beatae
+            reprehenderit animi. Assumenda quaerat doloremque necessitatibus ex
+            et animi praesentium, sint ea aliquid dicta cum beatae iste
+            quibusdam. Porro laborum cum inventore quis! Reiciendis repellat
+            dolore sint architecto repudiandae maxime fugiat aut quis et magnam
+            doloribus, inventore nostrum accusamus, quo ab dolorum enim
+            expedita! Quam sapiente laborum repudiandae velit saepe, repellendus
+            beatae porro illo nam dicta veritatis delectus sunt adipisci quas
+            deleniti. Deserunt quae veniam ullam ut animi quas harum recusandae
+            delectus unde?TESTEST
+          </p>
+        </div>
       </div>
-    </div>
-  </main>
-  <footer id="footer">
-    <p>Copyright &copy; My Website 2020</p>
-  </footer>
-</body>
-
+      <div id="present">
+        <img
+          src="https://source.unsplash.com//o4UhdLv5jbQ"
+          alt="picturepresent"
+        />
+        <div class="content">
+          <h2>Present</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
+            laborum at placeat laudantium reiciendis natus! Saepe ex nihil,
+            debitis ratione quam reiciendis optio expedita facilis, aspernatur
+            recusandae voluptas, repellendus consequatur. Quos, nostrum. Minima
+            animi magnam fugit aut hic neque, maiores suscipit voluptatibus?
+            Quaerat aperiam vero temporibus. Praesentium quas nemo laborum minus
+            voluptatem quo aliquam eveniet in sapiente! Eaque fugit recusandae
+            dolor soluta quisquam temporibus impedit sunt quos alias ea dicta
+            voluptatum, porro delectus blanditiis doloremque at dolores
+            reiciendis quam sint magni aliquam laborum facilis! Inventore ipsam,
+            ullam eveniet repellat nobis aut quisquam, expedita velit
+            consequatur doloribus architecto illum incidunt? Provident.
+          </p>
+        </div>
+      </div>
+      <div id="future">
+        <div class="container">
+          <h2>Future</h2>
+          <img
+            src="https://source.unsplash.com//9LMGWHqUwnc/"
+            alt="futurepic"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
+            porro incidunt, veritatis accusamus eius provident placeat at alias
+            laborum ut repellat quisquam deleniti hic fuga corporis ipsam
+            adipisci maiores amet molestiae id dolore minima est nobis voluptas?
+            Voluptatum possimus dignissimos deleniti facere dicta sed ipsa
+            consequuntur aut debitis, corrupti, quam obcaecati praesentium
+            assumenda neque tempore incidunt reprehenderit eveniet dolorem quia?
+            Placeat minus vel tenetur repudiandae voluptas veritatis ipsum
+            perferendis nihil obcaecati distinctio blanditiis, rem, laboriosam
+            nemo praesentium sed, eligendi vitae incidunt illum ab atque?
+            Corrupti, reprehenderit consequatur at ea magni quae, fugiat saepe
+            voluptatibus mollitia, consequuntur maxime assumenda! Facere, eaque!
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer id="footer">
+      <p>Copyright &copy; My Website 2020</p>
+    </footer>
+  </body>
 </html>
