--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -103,7 +103,25 @@
       </div>
     </main>
     <footer id="footer">
-      <p>Copyright &copy; My Website 2020</p>
+      <div class="container">
+        <h2>Contact Me</h2>
+        <form>
+          <div class="form-group">
+            <label for="name">Your name</label>
+            <input type="text" name="name" id="name" />
+          </div>
+          <div class="form-group">
+            <label for="email">Your email</label>
+            <input type="emai" name="emaill" id="email" />
+          </div>
+          <div class="form-group">
+            <label for="message">Message to me</label>
+            <textarea name="message" id="message"></textarea>
+          </div>
+          <button type="submit">Send message</button>
+        </form>
+        <p>Copyright &copy; My Website 2020</p>
+      </div>
     </footer>
   </body>
 </html>
