--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,33 +29,51 @@
       </nav>
     </header>
     <main>
-      <div id="hero-banner">
+      <section id="hero-banner">
         <h1>Hi my name is <span>Aaron Ojala</span> welcome to my portfolio</h1>
-      </div>
-      <div id="past">
-        <div class="container">
-          <h2>Past</h2>
-          <img
-            src="https://source.unsplash.com//m_HRfLhgABo/700x400"
-            alt="code"
-          />
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos
-            pariatur tenetur ullam aliquam illum nobis eum dolorum, sequi
-            corrupti fuga nam nisi soluta cumque tempore facere beatae
-            reprehenderit animi. Assumenda quaerat doloremque necessitatibus ex
-            et animi praesentium, sint ea aliquid dicta cum beatae iste
-            quibusdam. Porro laborum cum inventore quis! Reiciendis repellat
-            dolore sint architecto repudiandae maxime fugiat aut quis et magnam
-            doloribus, inventore nostrum accusamus, quo ab dolorum enim
-            expedita! Quam sapiente laborum repudiandae velit saepe, repellendus
-            beatae porro illo nam dicta veritatis delectus sunt adipisci quas
-            deleniti. Deserunt quae veniam ullam ut animi quas harum recusandae
-            delectus unde?TESTEST
-          </p>
+      </section>
+      <section id="past">
+        <h2>Past</h2>
+        <div class="containerPast">
+          <div class="box">
+            <img
+              src="https://source.unsplash.com//m_HRfLhgABo/400x300"
+              alt="code"
+            />
+            <h3>Lorem ipsum dolor sit</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
+              doloremque.
+            </p>
+            <a href="#">See more</a>
+          </div>
+          <div class="box">
+            <img
+              src="https://source.unsplash.com//m_HRfLhgABo/400x300"
+              alt="code"
+            />
+            <h3>Lorem ipsum dolor sit</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
+              doloremque.
+            </p>
+            <a href="#">See more</a>
+          </div>
+          <div class="box">
+            <img
+              src="https://source.unsplash.com//m_HRfLhgABo/400x300"
+              alt="code"
+            />
+            <h3>Lorem ipsum dolor sit</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima,
+              doloremque.
+            </p>
+            <a href="#">See more</a>
+          </div>
         </div>
-      </div>
-      <div id="present">
+      </section>
+      <section id="present">
         <img
           src="https://source.unsplash.com//o4UhdLv5jbQ"
           alt="picturepresent"
@@ -77,8 +95,8 @@
             consequatur doloribus architecto illum incidunt? Provident.
           </p>
         </div>
-      </div>
-      <div id="future">
+      </section>
+      <section id="future">
         <div class="container">
           <h2>Future</h2>
           <img
@@ -100,7 +118,7 @@
             voluptatibus mollitia, consequuntur maxime assumenda! Facere, eaque!
           </p>
         </div>
-      </div>
+      </section>
     </main>
     <footer id="footer">
       <div class="container">
