--- a/7_task3rdweekrecap/index.html
+++ b/7_task3rdweekrecap/index.html
@@ -83,27 +83,53 @@
           </div>
           <div class="newsletter">
             <h3>Do you want to join with our newsletter?</h3>
-            <div class="radio1"><input type="radio" /><label>Yes</label></div>
-            <div class="radio2"><input type="radio" /><label>No</label></div>
+            <div class="radio1">
+              <input type="radio" id="join_yes" name="newsletter" /><label
+                for="join_yes"
+                >Yes</label
+              >
+            </div>
+            <div class="radio2">
+              <input type="radio" id="join_no" name="newsletter" /><label
+                for="join_no"
+                >No</label
+              >
+            </div>
           </div>
           <div class="how">
             <h3>How did you find us?</h3>
             <div class="form-group2">
-              <input type="checkbox" /><label>Friend told me</label>
+              <input type="checkbox" id="friend" name="friend" /><label
+                for="friend"
+                >Friend told me</label
+              >
             </div>
             <div class="form-group2">
-              <input type="checkbox" /><label>Found in the internet</label>
+              <input type="checkbox" id="internet" name="internet" /><label
+                for="internet"
+                >Found in the internet</label
+              >
             </div>
             <div class="form-group2">
-              <input type="checkbox" /><label>Saw in Social Media</label>
+              <input type="checkbox" id="social" name="social" /><label
+                for="social"
+                >Saw in Social Media</label
+              >
             </div>
             <div class="form-group2">
-              <input type="checkbox" /><label>Other</label>
+              <input type="checkbox" id="other" name="other" /><label
+                for="other"
+                >Other</label
+              >
             </div>
             <div class="form-group2">
-              <textarea placeholder="How?"></textarea>
+              <textarea
+                name="message"
+                name="message"
+                placeholder="How?"
+              ></textarea>
             </div>
-            <button>Send</button>
+            <button type="submit">Send</button>
           </div>
         </form>
       </footer>
