--- a/11_taskPseudo/index.html
+++ b/11_taskPseudo/index.html
@@ -46,10 +46,7 @@
         </div>
       </section>
       <div class="text-content">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit minus
-          iusto earum mollitia vel quam!
-        </p>
+        <p>This element is p:first-child</p>
         <p>This is an example of position relative (top = 75px, left = 20px)</p>
         <p>
           This is an example of position of absolute. Note: parent has to be
@@ -92,21 +89,8 @@
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit minus
           iusto earum mollitia vel quam!
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit minus
-          iusto earum mollitia vel quam!
-        </p>
+        <p>This is an example of p:last-child</p>
       </div>
     </main>
-    <footer>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit minus
-        iusto earum mollitia vel quam!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit minus
-        iusto earum mollitia vel quam!
-      </p>
-    </footer>
   </body>
 </html>
