--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,9 +21,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="#past">Past</a></li>
-          <li><a href="#present">Present</a></li>
-          <li><a href="#future">Future</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#footer">Contact Me</a></li>
         </ul>
       </nav>
@@ -32,9 +32,9 @@
       <section id="hero-banner">
         <h1>Hi my name is <span>Aaron Ojala</span> welcome to my portfolio</h1>
       </section>
-      <section id="past">
-        <h2>Past</h2>
-        <div class="containerPast">
+      <section id="work">
+        <h2>Work</h2>
+        <div class="containerWork">
           <div class="box">
             <img
               src="https://source.unsplash.com//m_HRfLhgABo/400x300"
@@ -49,7 +49,7 @@
           </div>
           <div class="box">
             <img
-              src="https://source.unsplash.com//m_HRfLhgABo/400x300"
+              src="https://source.unsplash.com/SY0RT0aWBLY/400x300"
               alt="code"
             />
             <h3>Lorem ipsum dolor sit</h3>
@@ -61,7 +61,7 @@
           </div>
           <div class="box">
             <img
-              src="https://source.unsplash.com//m_HRfLhgABo/400x300"
+              src="https://source.unsplash.com/_CpF-Za8crc/400x300"
               alt="code"
             />
             <h3>Lorem ipsum dolor sit</h3>
@@ -73,13 +73,13 @@
           </div>
         </div>
       </section>
-      <section id="present">
+      <section id="experience">
         <img
           src="https://source.unsplash.com//o4UhdLv5jbQ"
-          alt="picturepresent"
+          alt="picture_experience"
         />
         <div class="content">
-          <h2>Present</h2>
+          <h2>Experience</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
             laborum at placeat laudantium reiciendis natus! Saepe ex nihil,
@@ -96,27 +96,39 @@
           </p>
         </div>
       </section>
-      <section id="future">
+      <section id="skills">
         <div class="container">
-          <h2>Future</h2>
-          <img
-            src="https://source.unsplash.com//9LMGWHqUwnc/"
-            alt="futurepic"
-          />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt
-            porro incidunt, veritatis accusamus eius provident placeat at alias
-            laborum ut repellat quisquam deleniti hic fuga corporis ipsam
-            adipisci maiores amet molestiae id dolore minima est nobis voluptas?
-            Voluptatum possimus dignissimos deleniti facere dicta sed ipsa
-            consequuntur aut debitis, corrupti, quam obcaecati praesentium
-            assumenda neque tempore incidunt reprehenderit eveniet dolorem quia?
-            Placeat minus vel tenetur repudiandae voluptas veritatis ipsum
-            perferendis nihil obcaecati distinctio blanditiis, rem, laboriosam
-            nemo praesentium sed, eligendi vitae incidunt illum ab atque?
-            Corrupti, reprehenderit consequatur at ea magni quae, fugiat saepe
-            voluptatibus mollitia, consequuntur maxime assumenda! Facere, eaque!
-          </p>
+          <h2>Skills</h2>
+          <div class="containerSkills">
+            <div class="box">
+              <i><img src="icons/html-5 1.svg" alt="htmlicon" /></i>
+              <p>HTML</p>
+              <div class="myProgress">
+                <div id="myBar"></div>
+              </div>
+            </div>
+            <div class="box">
+              <i><img src="icons/css 1.svg" alt="cssicon" /></i>
+              <p>CSS</p>
+              <div class="myProgress">
+                <div id="myBar2"></div>
+              </div>
+            </div>
+            <div class="box">
+              <i><img src="icons/plane 1 (1).svg" alt="planeicon" /> </i>
+              <p>Aviation</p>
+              <div class="myProgress">
+                <div id="myBar3"></div>
+              </div>
+            </div>
+            <div class="box">
+              <i><img src="icons/Basketball.svg" alt="basketballicon" /></i>
+              <p>Basketball</p>
+              <div class="myProgress">
+                <div id="myBar4"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
