--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div id="logo">
-        <a href="#"><img src="logowhite.svg" viewBox alt="logo" /></a>
+        <a href="#"><img src="logowhite.svg" alt="logo" /></a>
       </div>
       <nav>
         <ul>
