add progress bar

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -103,29 +103,22 @@
             <div class="box">
               <i><img src="icons/html-5 1.svg" alt="htmlicon" /></i>
               <p>HTML</p>
-              <div class="myProgress">
-                <div id="myBar"></div>
-              </div>
+              <progress max="100" value="25"></progress>
             </div>
             <div class="box">
               <i><img src="icons/css 1.svg" alt="cssicon" /></i>
               <p>CSS</p>
-              <div class="myProgress">
-                <div id="myBar2"></div>
-              </div>
+              <progress max="100" value="15"></progress>
             </div>
             <div class="box">
               <i><img src="icons/plane 1 (1).svg" alt="planeicon" /> </i>
               <p>Aviation</p>
-              <div class="myProgress">
-                <div id="myBar3"></div>
-              </div>
+              <progress max="100" value="80"></progress>
             </div>
             <div class="box">
               <i><img src="icons/Basketball.svg" alt="basketballicon" /></i>
               <p>Basketball</p>
-              <div class="myProgress">
-                <div id="myBar4"></div>
+              <progress max="100" value="85"></progress>
               </div>
             </div>
           </div>
