--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/1264ce8aa0.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -20,12 +21,18 @@
         <a href="#"><img src="logowhite.svg" alt="logo" /></a>
       </div>
       <nav>
-        <ul>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#footer">Contact Me</a></li>
-        </ul>
+      <div class="menu-bar">
+          <li><a class="nodeco" href="#">Portfolio<i class="fas fa-angle-down"></i></a></li>
+          <div class="sub-menu">
+              <ul>
+          <li><a class="nodeco" href="#work">Work</a></li>
+          <li><a class="nodeco" href="#experience">Experience</a></li>
+          <li><a class="nodeco" href="#skills">Skills</a></li>
+          <li><a class="nodeco" href="gallery.html">Gallery</a></li>
+              </ul>
+          </div>    
+        </div>
+          <li><a class="nodeco" href="#footer">Contact Me</a></li>
       </nav>
     </header>
     <main>
