add hover effect

--- a/Portfolio/gallery.html
+++ b/Portfolio/gallery.html
@@ -32,14 +32,16 @@
           </li>
           <div class="sub-menu">
             <ul>
-              <li><a class="nodeco" href="#work">Work</a></li>
-              <li><a class="nodeco" href="#experience">Experience</a></li>
-              <li><a class="nodeco" href="#skills">Skills</a></li>
-              <li><a class="nodeco" href="gallery.html">Gallery</a></li>
+              <li><a class="nodeco" href="index.html">Work</a></li>
+              <li><a class="nodeco" href="index.html">Experience</a></li>
+              <li><a class="nodeco" href="index.html">Skills</a></li>
+              <li><a class="nodeco" href="#gallery">Gallery</a></li>
             </ul>
           </div>
         </div>
-        <li><a class="nodeco" href="#footer">Contact Me</a></li>
+        <div class="contacthover">
+          <li><a class="nodeco" href="#footer">Contact Me</a></li>
+        </div>
       </nav>
     </header>
     <main>
