--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -32,7 +32,9 @@
               </ul>
           </div>    
         </div>
+        <div class="contacthover">
           <li><a class="nodeco" href="#footer">Contact Me</a></li>
+        </div>
       </nav>
     </header>
     <main>
