--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div id="logo">
-        <a href="#"><img src="logowhite.svg" alt="logo" /></a>
+        <a href="index.html"><img src="logowhite.svg" alt="logo" /></a>
       </div>
       <nav>
       <div class="menu-bar">
