--- a/Portfolio/gallery.html
+++ b/Portfolio/gallery.html
@@ -32,9 +32,11 @@
           </li>
           <div class="sub-menu">
             <ul>
-              <li><a class="nodeco" href="index.html">Work</a></li>
-              <li><a class="nodeco" href="index.html">Experience</a></li>
-              <li><a class="nodeco" href="index.html">Skills</a></li>
+              <li><a class="nodeco" href="index.html#work">Work</a></li>
+              <li>
+                <a class="nodeco" href="index.html#experience">Experience</a>
+              </li>
+              <li><a class="nodeco" href="index.html#skills">Skills</a></li>
               <li><a class="nodeco" href="#gallery">Gallery</a></li>
             </ul>
           </div>
