--- a/14_taskJobsinFinland/index.html
+++ b/14_taskJobsinFinland/index.html
@@ -52,20 +52,24 @@
         <section id="category">
           <h2>Explore by Category</h2>
           <p>
-            Browse 38 open positions in your field of expertise. If you don’t
+            Browse 48 open positions in your field of expertise. If you don’t
             find a suitable category, you can try a category close to your
             expertise or use the keyword search
           </p>
           <div class="grid">
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
-            <div class="item"><a href="#">Item</a></div>
+            <div class="item robotics">
+              <a href="#">Robotics & AI</a>
+            </div>
+            <div class="item other"><a href="#">Other</a></div>
+            <div class="item administration">
+              <a href="#">administration</a>
+            </div>
+            <div class="item academic"><a href="#">academic</a></div>
+            <div class="item engineering"><a href="#">engineering</a></div>
+            <div class="item hospitality"><a href="#">hospitality</a></div>
+            <div class="item ict"><a href="#">ict</a></div>
+            <div class="item marketing"><a href="#">marketing & sales</a></div>
+            <div class="item project"><a href="#">project management</a></div>
           </div>
         </section>
         <section id="region">
